<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSettingDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_settings"
        android:drawablePadding="8dp"
        android:padding="16dp"
        android:text="@string/action_settings"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTextModeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/action_text_mode"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/rgMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingDescription" />

    <RadioGroup
        android:id="@+id/rgMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextModeDescription">

        <RadioButton
            android:id="@+id/rbWhiteMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:button="@drawable/white_state"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/text_normal_mode" />

        <RadioButton
            android:id="@+id/rbSepiaMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:button="@drawable/sepia_state"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/text_sepia_mode" />

        <RadioButton
            android:id="@+id/rbNightMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/night_state"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/text_night_mode" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvTextFontDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/action_font_mode"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rgFont"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingDescription" />

    <RadioGroup
        android:id="@+id/rgFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextFontDescription">

        <RadioButton
            android:id="@+id/rbFontOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:button="@drawable/font_state"
            android:layoutDirection="rtl"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/text_font_one" />

        <RadioButton
            android:id="@+id/rbFontTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:button="@drawable/font_state"
            android:layoutDirection="rtl"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/text_font_two" />

        <RadioButton
            android:id="@+id/rbFontThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/font_state"
            android:layoutDirection="rtl"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/text_font_three" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvTextSizeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/action_text_size"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgMode" />

    <SeekBar
        android:id="@+id/sbTextSize"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:max="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextSizeDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>